Code smell.